@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020220924"
-#define public MagickPackageReleaseDate "snapshot-20220924"
+#define public MagickPackageVersionAddendum ".020220925"
+#define public MagickPackageReleaseDate "snapshot-20220925"
